# CudaSift

./: CMakeLists.txt  README.md
cmake/: cmake-macros.cmake  cmake-tools.cmake  libs-cuda.cmake  libs-opencv.cmake
source/: CMakeLists.txt  cs_data.h  cs_device.cu  cs_device.h  cs_filter.h  cs_host.cu  cs_host.h  cs_library.cu  cs_library.h  cs_main.cu  cudaImage.cu  cudaImage.h  main.cpp  opencv_sift.cpp  opencv_sift.h
